<resources>
    <string name="app_name">ZhiHuNews</string>
    <string name="messages">消息</string>
    <string name="mode">夜间模式</string>
    <string name="settings">设置选项</string>
    <string name="share">分享</string>
    <string name="favorites">收藏</string>
    <string name="comment">评价</string>
    <string name="like">喜欢</string>
    <string name="home">首页</string>
    <string name="daily_psy">日常心理学</string>
    <string name="recommended">用户推荐日报</string>
    <string name="movie">电影日报</string>
    <string name="no_boring">不许无聊</string>
    <string name="design">设计日报</string>
    <string name="edit">编辑</string>
    <string name="corporation">大公司日报</string>
    <string name="finance">财经日报</string>
    <string name="internet_security">互联网安全</string>
    <string name="start_game">开始游戏</string>
    <string name="music">音乐日报</string>
    <string name="cartoon">动漫日报</string>
    <string name="PE">体育日报</string>
    <string name="editor">主编</string>
    <string name="save">保存</string>
    <string name="back">back</string>
    <string name="detail_favorites">detail_favorites</string>
    <string name="path_comment_lines">M7,8 L17,8 M7,11 L17,11 M7,14 L17,14</string>
    <string name="path_comment_add">M12,7 L12,10 M8,11 L16,11 M12,12 L12,15</string>
    <string name="path_comment_bubble">M2,5 C2,3.9 2.9,3 4,3 L20,3 C21.1,3 22,3.9 22,5 L22,17 C22,18.1 21.1,19 20,19 L2,19 L2,5 Z M2,23 L6,19 L2,19 L2,23 Z</string>
    <string name="comment_lines_add_group">comment_lines_add_group</string>
    <string name="comment_lines">comment_lines</string>
    <string name="comment_add">comment_add</string>
    <string name="comment_likes_count">0</string>
    <string name="hint_reply">Reply</string>
    <string name="image">image</string>
</resources>
